--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Crear Cuenta - CompilandoCode{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles_login.css') }}" />
+{% endblock %}
+
 {% block content %}
 <div class="auth-background">
   <div class="floating-shapes">
